--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           robot --outputdir robot-test-results test_cases
       - name: Archive Test Results
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-results
